# NNBackend

./: .gitignore  CMakeLists.txt  Makefile
demo/demo0/: demo0.onnx  demo0A.onnx  demo0B.onnx  input.txt  main.cpp  main.py  output.txt  resnet.py
src/: CMakeLists.txt
src/common/: param.h  util.hpp
src/graph/: Graph.cpp  Graph.h
src/onnx2graph/: Makefile  onnx.pb.cc  onnx.pb.h  onnx2graph.cpp  onnx2graph.h  parse  parse.cpp  parse.hpp  tool.hpp
src/operator/: Add.cu  Add.h  BatchNormalization.cu  BatchNormalization.h  Clip.cu  Clip.h  Conv.cu  Conv.h  Gemm.cu  Gemm.h  GlobalAveragePool.cu  GlobalAveragePool.h  Operator.h  Reshape.cu  Reshape.h
src/tensor/: Tensor.hpp
src/testCommon/: test.hpp
test/graph/: Graph_test.cpp
test/onnx2graph/: onnx2graph_test.cu
test/operator/: Add_test.cu  BatchNormalization_test.cu  Clip_test.cu  Conv_test.cu  Gemm_test.cu  GlobalAveragePool_test.cu  Reshape_test.cu
test/tensor/: Tensor_test.cu
